--- a/Bottom_Left.html
+++ b/Bottom_Left.html
@@ -24,7 +24,7 @@ Left: 80px;
 <br/>
 <br/>
 <h2>&ensp;&ensp;&ensp;&ensp; 周晓强</h2>
-<p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Graduate in the University of<br /> 
+<p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Student in the University of<br /> 
 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Science and Technlogy of China</p>
 
 
