--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -9,7 +9,7 @@
 <h1>About Me</h1>
 <hr width = 775px align = "left"/> 
 <p> <font size = "4.5">I am currently second-year graduate in the
-<a href = "https://www.ustc.edu.cn" target="_blank" style= "color:blue; text-decoration:none;" >
+<a href = "https://www.ustc.edu.cn" target="_blank" >
 University of Science and Technology of China.</font></p>
 
 <h1>Education</h1>
