--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -6,18 +6,25 @@
 <title>Bottom Right</title>
 </head>
 <br/>
+
+
 <h1>About Me</h1>
 <hr width = 775px align = "left"/> 
 <p> <font size = "4.5">I am currently second-year graduate in the
 <a href = "https://www.ustc.edu.cn" target="_blank" >
 University of Science and Technology of China.</font></p>
 
+
+<h1>Research Interest</h1>
+<hr width = 775px align = "left"/> 
+<p> <font size = "4.5">Computer Vision, Multimedia Information Retrieval</font></p>
+
 <h1>Education</h1>
 <hr width = 775px align = "left"/> 
 <img src = "ustcblue.jpg", width = 100px height = 100px style = "float:left"/>
 <div style = "float:left">
   <font size = "1"><br/></font><font size = "5" face = "Times New Roman">&ensp;
-University of Science and Technology of China, Hefei, China<br/></font> 
+    Ph.D, Automation, University of Science and Technology of China, Hefei, China<br/></font> 
 <font size = "4.5">&ensp;&ensp;August 2014 - July 2019<br/>&ensp;&ensp;B.S. in Applied Physics</font></div>
 <br/>
 <br/>
