--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -12,7 +12,7 @@
 <hr width = 775px align = "left"/> 
 <p> <font size = "4.5">I am currently second-year graduate in the
 <a href = "https://www.ustc.edu.cn" target="_blank" >
-University of Science and Technology of China.</font></p>
+University of Science and Technology of China.</font></a></p>
 
 
 <h1>Research Interest</h1>
