--- a/Top.html
+++ b/Top.html
@@ -6,8 +6,8 @@
 <title>Top Frame</title>
 </head>
 
-<h2>&ensp;&ensp;&ensp;<a href = "https://username.github.io" target="_blank" 
-style= "color:black; text-decoration:none;" >Xiaoqiang Zhou</a></h2>
+<h2>&ensp;&ensp;&ensp;<a href = "https://xiaoqiangzhou.github.io" target="_blank" 
+style= "color:black; text-decoration:none;" >Xiaoqiang Zhou's Homepage</a></h2>
 <hr/> 
 <body>
 </body>
