--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -32,9 +32,9 @@
     <font size="4.5">
     
         <ul>
-            <li>Ph.D, Automation, USTC</li>
+            <li>Ph.D, Automation, USTC, 2019-Now</li>
             Advisors: Tieniu Tan, Ran He, Zilei Wang
-            <li>B.E., Electronic Engineering and Information Science, USTC</li>
+            <li>B.E., Electronic Engineering and Information Science, USTC, 2015-2019</li>
             Academic Records: GPA: 3.72/4.30 (ranking top 15% in school)
         </ul>
     </font>
