--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -61,7 +61,7 @@
             dual attention fusion module to fuse the restored and known regions in a smooth way.
             <li>2020/04-2020/09</li>
             Research Intern: Base Computer Vision Group, Meituan, Beijing, Mentor: Dr. Zhenhua Chai<br>
-            <b>Project: Image Watermak Removal</b><br>
+            <b>Project: Image Watermark Removal</b><br>
             We implement and deploy an image watermark removal algorithm for Meituan Dianping. The<br>
             service call is more than 300k times per day
             <li>2019/09-2020/03</li>
