--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -54,11 +54,11 @@
         <ul>
             <li>2020/05-2020/07</li>
             Research Assistant: Institute of Automation, Chinese Academy of Sciences<br>
-            <b>Paper: Free-Form Image Inpainting via Contrastive Attention Network (ICPR 2020 oral)</b><br>
+            <font color="blue"><b>Paper: Free-Form Image Inpainting via Contrastive Attention Network (ICPR 2020 oral)</b></font><br>
             Authors: Xin Ma, <b>Xiaoqiang Zhou</b>, Huaibo Huang, Zhenhua Chai, Xiaolin Wei, Ran He.<br>
-            Abstract: We propose a self-supervised Siamese inference network to improve the network’s <br>
+            <!--Abstract: We propose a self-supervised Siamese inference network to improve the network’s <br>
             robustness and generalization. Furthermore, we propose a multi-scale decoder with a novel <br>
-            dual attention fusion module to fuse the restored and known regions in a smooth way.
+            dual attention fusion module to fuse the restored and known regions in a smooth way.-->
             <li>2020/04-2020/09</li>
             Research Intern: Base Computer Vision Group, Meituan, Beijing, Mentor: Dr. Zhenhua Chai<br>
             <b>Project: Image Watermark Removal</b><br>
@@ -66,12 +66,12 @@
             service call is more than 300k times per day
             <li>2019/09-2020/03</li>
             Research Assistant: University of Science and Technology of China<br>
-            <b>Paper: Semantic Image Inpainting with Contrastive Relation Network (ICPR 2020 oral,<br>
-            Best Scientific Paper Award)</b><br>
+            <font color="blue"><b>Paper: Semantic Image Inpainting with Contrastive Relation Network (ICPR 2020 oral,<br>
+            Best Scientific Paper Award)</b></font><br>
             Authors: <b>Xiaoqiang Zhou</b>, Junjie Li, Zilei Wang, Ran He, Tieniu Tan.<br>
-            Abstract: We propose a novel graph-based relation network to model the relationship existed<br>
+            <!--Abstract: We propose a novel graph-based relation network to model the relationship existed<br>
             in corrupted image. In relation network, both intra-relationship for pixels in the same semantic<br>
-            region and inter-relationship between different semantic parts are considered.
+            region and inter-relationship between different semantic parts are considered.-->
             <li>2018/11-2019/03</li>
             Research Intern: Internet Media Group, MSRA, Beijing, Mentor: Dr. Chong Luo<br>
             <b>Demo: Video Synopsis, Microsoft TechFest 2019</b><br>
@@ -80,9 +80,9 @@
             <li>2018/03-2018/04</li>
             Research Assistant: Multimedia Computing & Communication Lab, Advisor: Prof. Wengang Zhou<br>
             <b>Experiment: Compare performance of SIFT and R-MAC in visual localization task</b><br>
-            I record a database video and query videos in campus, while query videos are shorter and<br>
+            <!--I record a database video and query videos in campus, while query videos are shorter and<br>
             captured in a different light or weather condition. Using SIFT and R-MAC descriptor as the<br>
-            image feature separately, I compare their performance on this task.
+            image feature separately, I compare their performance on this task.-->
         </ul>
     </font>
 </p>
