--- a/Bottom_Left.html
+++ b/Bottom_Left.html
@@ -24,8 +24,8 @@ Left: 80px;
 <br/>
 <br/>
 <h2>&ensp;&ensp;&ensp;&ensp; 周晓强</h2>
-<p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Student in the University of<br /> 
-&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Science and Technlogy of China</p>
+<p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Email: xq525@mail.ustc.edu.cn<br /> 
+</p>
 
 
 </body>
