--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -12,10 +12,13 @@
 <h1>About Me</h1>
 <hr width=775px align="left" />
 <p>
-    <font size="4.5">I am currently a second-year graduate student in the
+    <font size="4.5">I am a second-year Ph.D student in the
         <a href="https://www.ustc.edu.cn" target="_blank">
-            University of Science and Technology of China (USTC).
-    </font></a>
+            University of Science and Technology of China (USTC). 
+    </a> <br>
+    I joined the USTC-NLPR Joint-PhD program, under the co-supervision of Prof. Tieniu Tan, Prof. Ran He and Prof. Zilei Wang.<br>
+    Currently, I work at Center for Research on Intelligent Perception and Computing, Institute of Automation, Chinese Academy of Sciences
+</font>
 </p>
 
 
@@ -148,3 +151,4 @@
 </body>
 
 </html>
+
