--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Xiaoqiang Zhou's Home Page</title>
 </head>
-<body style="margin: 0px; height:3050px; width:auto">
+<body style="margin: 0px; padding: 0px; height:3050px; width:auto">
 <iframe src="FrameSetting.html" style="height:100%;width:100%;border-width:0px;">
 </iframe>
 
