--- a/Bottom_Left.html
+++ b/Bottom_Left.html
@@ -11,7 +11,7 @@ img.ex1
 {
 position:absolute;
 Top:20px;
-Left: 80px;
+Left: 60px;
 }
 </style>
 <img class = "ex1" src ="大学.jpg" width ="120" height = "150">
@@ -23,8 +23,8 @@ Left: 80px;
 <br/>
 <br/>
 <br/>
-<h2>&ensp;&ensp;&ensp;&ensp; 周晓强</h2>
-<p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Email: xq525@mail.ustc.edu.cn<br /> 
+<h2>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 周晓强</h2>
+<p>&ensp;&ensp;Email: xq525@mail.ustc.edu.cn<br /> 
 </p>
 
 
