--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -143,7 +143,7 @@
             <li>Movies</li>
                 Have watched about 700 movies in total
             <li>Economics and Finance</li>
-                Have got qualification certificates of securities, fund and futures.
+                Have got some qualification certificates, like securities, securities analyst, fund and futures.
             <!--<ul>
                 <li>Securities Qualification Certificate</li>
                 <li>Fund Qualification Certificate</li>
