--- a/Bottom_Left.html
+++ b/Bottom_Left.html
@@ -14,7 +14,7 @@ Top:20px;
 Left: 60px;
 }
 </style>
-<img class = "ex1" src ="大学.jpg" width ="120" height = "150">
+<img class = "ex1" src ="zhouxiaoqiang.jpg" width ="120" height = "150">
 <br/>
 <br/>
 <br/>
