--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -35,7 +35,7 @@
 <img src="ustcblue.jpg" , width=100px height=100px style="float:left" />
 <div style="float:left">
     <font size="4.5">
-
+        University of Science and Technology of China (USTC)
         <ul>
             <li>Ph.D, Automation, USTC, 2019-Now</li>
             Advisors: Tieniu Tan, Ran He, Zilei Wang
