--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -13,7 +13,7 @@
 <hr width=775px align="left" />
 <p>
     <font size="4.5">I am a second-year Ph.D student in the
-        <a href="https://www.ustc.edu.cn" target="_blank">
+        <a href="http://en.ustc.edu.cn/" target="_blank">
             University of Science and Technology of China (USTC).
         </a> <br>
         I joined the USTC-NLPR Joint-PhD program, under the co-supervision of Prof. Tieniu Tan, Prof. Ran He and Prof.
@@ -35,8 +35,8 @@
 <img src="ustcblue.jpg" , width=100px height=100px style="float:left" />
 <div style="float:left">
     <font size="4.5">
-        University of Science and Technology of China (USTC)
         <ul>
+            University of Science and Technology of China (USTC)
             <li>Ph.D, Automation, USTC, 2019-Now</li>
             Advisors: Tieniu Tan, Ran He, Zilei Wang
             <li>B.E., Electronic Engineering and Information Science, USTC, 2015-2019</li>
@@ -45,6 +45,7 @@
     </font>
 
 </div>
+<br />
 <br />
 <br />
 <br />
@@ -142,7 +143,7 @@
                 Read about 25 books every year
             <li>Movies</li>
                 Have watched about 700 movies in total
-            <li>Economics and Finance</li>
+            <li>Economics, Finance and Investments</li>
                 Have got some qualification certificates, like securities, securities analyst, fund and futures.
             <!--<ul>
                 <li>Securities Qualification Certificate</li>
