--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -140,9 +140,9 @@
     <font size="4.5">
         <ul>
             <li>Books</li>
-                Read about 25 books every year
+                Interested in political, economic and cultural books. Read about 30 books every year.
             <li>Movies</li>
-                Have watched about 700 movies in total
+                Have watched more than 700 movies in total.
             <li>Economics, Finance and Investments</li>
                 Have got some qualification certificates, like securities, securities analyst, fund and futures.
             <!--<ul>
