--- a/Bottom_Right.html
+++ b/Bottom_Right.html
@@ -12,7 +12,7 @@
 <h1>About Me</h1>
 <hr width=775px align="left" />
 <p>
-    <font size="4.5">I am a second-year Ph.D student in the
+    <font size="4.5">I am a third-year Ph.D student in the
         <a href="http://en.ustc.edu.cn/" target="_blank">
             University of Science and Technology of China (USTC).
         </a> <br>
